# leaderboard

./: .gitignore  Cargo.toml  Makefile
src/: frontend.rs  main.rs  websocket.rs
templates/: base.html  index.html  styles.css
