[package]
name = "shuttlegame-leaderboard"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["macros", "ws"] }
futures = "0.3.28"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
shuttle-axum = "0.26.0"
shuttle-runtime = "0.26.0"
shuttle-static-folder = "0.26.0"
tera = "1.19.1"
tokio = "1.28.2"
tokio-stream = { version = "0.1.14", features = ["sync"] }
